# its-logical

./: .gitignore  Cargo.toml  Makefile  README.md  index.html
assets/: sw.js
src/: app.rs  change_propagation.rs  knowledge_engine.rs  lib.rs  main.rs  suggestions.rs  term_knowledge_base.rs
src/changes/: change.rs  deletion.rs  mod.rs  terms_cache.rs
src/changes/propagation/: mod.rs  terms_cache.rs  terms_filter.rs
src/changes_handling/: mod.rs
src/changes_handling/automatic/: loaded.rs  mod.rs
src/changes_handling/with_confirmation/: mod.rs
src/knowledge/: mod.rs
src/knowledge/engine/: mod.rs
src/knowledge/model/: fat_term.rs  mod.rs
src/knowledge/model/comment/: comment.rs  mod.rs  name_description.rs
src/knowledge/model/term/: args_binding.rs  bound_term.rs  mod.rs  rule.rs  term.rs
src/knowledge/store/: in_memory.rs  mod.rs  persistent.rs
src/model/: fat_term.rs  mod.rs  parsing.rs  term.rs
src/model/comment/: comment.rs  name_description.rs
src/model/term/: args_binding.rs  bound_term.rs  mod.rs  rule.rs  term.rs
src/terms_cache/: mod.rs
src/terms_cache/change_handling/: automatic.rs  mod.rs  two_phase_commit.rs  with_confirmation.rs
src/ui/: change_propagator.rs  mod.rs  terms_list.rs
src/ui/change_propagator/: mod.rs  terms_filter.rs
src/ui/changes_handling/: automatic.rs  mod.rs
src/ui/changes_handling/automatic/: change.rs  deletion.rs  loaded.rs  loaded_impl.rs  mod.rs
src/ui/changes_handling/with_confirmation/: change.rs  commit.rs  deletion.rs  loaded.rs  mod.rs
src/ui/load_module_menu/: mod.rs
src/ui/tabs/: mod.rs  two_phase_commit_screen.rs
src/ui/tabs/ask/: growable_table.rs  mod.rs  table.rs
src/ui/tabs/commit_tabs/: mod.rs  two_phase_commit.rs
src/ui/tabs/term_tabs/: mod.rs  screen.rs
src/ui/term_screen/: edit_button.rs  mod.rs  placeholder.rs  points_in_time.rs  term_screen_pit.rs
src/ui/widgets/: ask.rs  drag_and_drop.rs  mod.rs  popup_suggestions.rs  tabs.rs  term.rs  term_screen.rs  terms_list.rs  text_suggestions.rs
src/ui/widgets/drag_and_drop/: change_tracking_list.rs  mod.rs
src/ui/widgets/load_module_menu/: mod.rs
src/ui/widgets/tabs/: commit_tabs.rs  mod.rs
src/ui/widgets/tabs/ask/: growable_table.rs  mod.rs
src/ui/widgets/tabs/commit_tabs/: mod.rs  two_phase_commit.rs
src/ui/widgets/tabs/term_tabs/: mod.rs  (+1 more)
src/ui/widgets/term_screen/: edit_button.rs  mod.rs  placeholder.rs  points_in_time.rs  term_screen_pit.rs  two_phase_commit.rs
