[package]
name = "its_logical"
version = "0.0.1"
authors = ["Zdravko Shehov <z.shehov@gmail.com>"]
edition = "2021"
rust-version = "1.76"


[dependencies]
egui = "0.26.2"
eframe = { version = "0.26.2", default-features = false, features = [
    "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
thiserror = "1.0.40"
nom = "7.1.3"

serde = { version = "1", features = ["derive"] }
bincode = "2.0.0-rc.3"
bincode_derive = "2.0.0-rc.3"
fuzzy-matcher = "0.3.7"
git2 = "0.17.2"
scryer-prolog = "0.9.4"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"
tracing = "0.1.37"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"
wasm-bindgen-futures = "0.4"


[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2


[patch.crates-io]
