[package]
name = "its_logical"
version = "0.0.1"
authors = ["Zdravko Shehov <z.shehov@gmail.com>"]
edition = "2021"
rust-version = "1.85"


[dependencies]
egui = "0.31.1"
eframe = { version = "0.31.1", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow", # Use the glow rendering backend. Alternative: "wgpu".
    "persistence", # Enable restoring app state when restarting the app.
] }
thiserror = "1.0.40"
nom = "7.1.3"

serde = { version = "1", features = ["derive"] }
bincode = "2.0.0-rc.3"
bincode_derive = "2.0.0-rc.3"
fuzzy-matcher = "0.3.7"
git2 = "0.17.2"

scryer-prolog = { git = "https://github.com/mthom/scryer-prolog", rev = "8f514ce4193c61c8a7d2715c44a36c79cb537a26" }

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"
tracing = "0.1.37"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"
wasm-bindgen-futures = "0.4"


[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2


[patch.crates-io]
